@@ -12,6 +12,7 @@ codebird-php - changelog
 - Fix Ads API batch methods to send JSON body
 + Update Ads API Analytics methods (stats)
 + #177 Add async media/upload calls status by GET
++ Add POST media/metadata/create method
 
 3.1.0 (2016-02-15)
 + #143 Add support for proxy types
